<resources>
    <string name="app_name">ArtBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">My Books</string>
    <string name="menu_add">Add Books</string>
    <string name="menu_about">About Us</string>

    <string name="label_network_error">There is a problem with your internet connection.</string>
    <string name="label_auth_error">There was a problem logging in, please try again later.</string>
    <string name="label_dialog_questions">Are you sure you want to delete content ?</string>
    <string name="label_dialog_yes">Yes</string>
    <string name="label_dialog_no">No</string>

    <string name="label_question">Select Data Sourcee</string>
    <string name="label_service">WebDB Read</string>
    <string name="label_local">LocalDB Read</string>
    <string name="label_share">Share</string>
    <string name="label_hint_title">Title</string>
    <string name="label_hint_writer">Writer Name</string>
    <string name="label_hint_year">Year</string>
    <string name="label_btn_add_image">Add Image</string>
    <string name="label_btn_save">Save Book</string>
    <string name="label_valitation">Necessary</string>
    <string name="label_upload_loading">Please wait...</string>
    <string name="label_empty_book_list">You do not have an attached book yet.</string>
    <string name="label_add_book_success">Successfully added</string>
    <string name="label_delete_book_success">Successfully deleted</string>
    <string name="title_activity_book_detail">Book Detail Page</string>
</resources>