<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.BookDetailActivity"
    tools:showIn="@layout/activity_book_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaul_view_8x"
            android:layout_marginHorizontal="@dimen/defaul_view_4x"
            android:background="@drawable/rectangle_edittext"
            android:padding="@dimen/defaul_view_3x"
            android:hint="@string/label_hint_title"
            android:enabled="false"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:fontFamily="@font/varela"
            android:inputType="text|textCapSentences"/>

        <EditText
            android:id="@+id/edtWriter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaul_view_5x"
            android:layout_marginHorizontal="@dimen/defaul_view_4x"
            android:background="@drawable/rectangle_edittext"
            android:padding="@dimen/defaul_view_3x"
            android:enabled="false"
            android:hint="@string/label_hint_writer"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:fontFamily="@font/varela"
            android:inputType="text|textCapSentences"/>

        <EditText
            android:id="@+id/edtYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/defaul_view_5x"
            android:layout_marginHorizontal="@dimen/defaul_view_4x"
            android:background="@drawable/rectangle_edittext"
            android:padding="@dimen/defaul_view_3x"
            android:enabled="false"
            android:hint="@string/label_hint_year"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:fontFamily="@font/varela"
            android:inputType="text|textCapSentences"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShare"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/defaul_view_2x"
            android:layout_marginBottom="@dimen/defaul_view_4x"
            android:background="@drawable/rectangle_btn_ligth"
            android:fontFamily="@font/varela"
            android:textAllCaps="false"
            android:text="@string/label_share"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>